--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -38,6 +38,11 @@
     <string name="center">Centrerad</string>
     <string name="right">Höger</string>
     <string name="widget_note">Anteckningen används i widgeten</string>
+    <string name="show_note_picker">Show a note picker on startup</string>
+
+    <!-- Import / Export -->
+    <string name="export_all_notes">Export all notes as files</string>
+    <string name="import_notes">Import multiple files as notes</string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- Short description has to have less than 80 chars -->
