--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -39,6 +39,7 @@
     <string name="right">右边</string>
     <string name="widget_note">在小部件中使用笔记</string>
     <string name="show_note_picker">Show a note picker on startup</string>
+    <string name="autosave_notes">Autosave notes</string>
 
     <!-- Import / Export -->
     <string name="export_all_notes">Export all notes as files</string>
