--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -38,12 +38,12 @@
     <string name="center">Zentriert</string>
     <string name="right">Rechtsbündig</string>
     <string name="widget_note">Widget-Notiz</string>
-    <string name="show_note_picker">Show a note picker on startup</string>
-    <string name="autosave_notes">Autosave notes</string>
+    <string name="show_note_picker">Zeige einen Notiz-Wähler beim Start</string>
+    <string name="autosave_notes">Notizen automatisch speichern</string>
 
     <!-- Import / Export -->
-    <string name="export_all_notes">Export all notes as files</string>
-    <string name="import_notes">Import multiple files as notes</string>
+    <string name="export_all_notes">Alle Notizen als Dateien exportieren</string>
+    <string name="import_notes">Mehrere Dateien als Notizen importieren</string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- Short description has to have less than 80 chars -->
