--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -38,12 +38,12 @@
     <string name="center">По центру</string>
     <string name="right">По правому краю</string>
     <string name="widget_note">Заметка, отображаемая в виджете</string>
-    <string name="show_note_picker">Show a note picker on startup</string>
-    <string name="autosave_notes">Autosave notes</string>
+    <string name="show_note_picker">Показывать список заметок при запуске</string>
+    <string name="autosave_notes">Автосохранение заметок</string>
 
     <!-- Import / Export -->
-    <string name="export_all_notes">Export all notes as files</string>
-    <string name="import_notes">Import multiple files as notes</string>
+    <string name="export_all_notes">Экспортировать все заметки в файлы</string>
+    <string name="import_notes">Импортировать несколько файлов в заметки</string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- Short description has to have less than 80 chars -->
