--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -40,6 +40,7 @@
     <string name="widget_note">Widget-Notiz</string>
     <string name="show_note_picker">Zeige einen Notiz-Wähler beim Start</string>
     <string name="autosave_notes">Notizen automatisch speichern</string>
+    <string name="enable_word_wrap">Enable word wrap</string>
 
     <!-- Import / Export -->
     <string name="export_all_notes">Alle Notizen als Dateien exportieren</string>
