--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -40,6 +40,7 @@
     <string name="widget_note">Notatka używana w widżecie</string>
     <string name="show_note_picker">Show a note picker on startup</string>
     <string name="autosave_notes">Autosave notes</string>
+    <string name="enable_word_wrap">Enable word wrap</string>
 
     <!-- Import / Export -->
     <string name="export_all_notes">Export all notes as files</string>
