--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -40,6 +40,7 @@
     <string name="widget_note">Poznámka použitá vo widgete</string>
     <string name="show_note_picker">Zobraziť zoznam poznámok po spustení</string>
     <string name="autosave_notes">Automaticky ukladať poznámky</string>
+    <string name="enable_word_wrap">Povoliť zalamovanie riadkov</string>
 
     <!-- Import / Export -->
     <string name="export_all_notes">Exportovať všetky poznámky ako súbory</string>
