--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -40,7 +40,7 @@
     <string name="widget_note">Заметка, отображаемая в виджете</string>
     <string name="show_note_picker">Показывать список заметок при запуске</string>
     <string name="autosave_notes">Автосохранение заметок</string>
-    <string name="enable_line_wrap">Enable line wrap</string>
+    <string name="enable_line_wrap">Переносить строки</string>
 
     <!-- Import / Export -->
     <string name="export_all_notes">Экспортировать все заметки в файлы</string>
