--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Prosty Notatnik</string>
-    <string name="app_launcher_name">Prosty Notatnik</string>
+    <string name="app_launcher_name">Notatnik</string>
     <string name="widget_config">Dziękujemy za korzystanie z aplikacji.\nPo więcej prostych aplikacji, takich jak ta, udaj się na SimpleMobileTools.com.</string>
     <string name="cannot_share_empty_text">Nie mogę udostępnić pustej notatki</string>
     <string name="simple_note">Prosta Notatka</string>
