--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -54,9 +54,9 @@
 
         Bet kada galite pasiekti įrašą naudojant šaukinį, kuris išsyk atveria programą.
 
-        Neturi reklamų ar nereikalingų leidimų. Visiškai atviro kodo, turi tamsią temą.
+        Neturi reklamų ar nereikalingų leidimų. Programėlė visiškai atviro kodo, yra galimybė keisti spalvas.
 
-        Tai tik viena iš daugelio programų. Kitas galite rasti čia http://www.simplemobiletools.com
+        Ši programėle yra viena iš keletos mūsų programėlių. Likusias Jūs galite rasti čia http://www.simplemobiletools.com
     </string>
 
     <!--
