--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -45,6 +45,7 @@
     <!-- Import / Export -->
     <string name="export_all_notes">Export all notes as files</string>
     <string name="import_notes">Import multiple files as notes</string>
+    <string name="import_folder">Import folder</string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- Short description has to have less than 80 chars -->
