update strings url to https

--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -57,7 +57,7 @@
 
         Uden reklamer og unødvendige tilladelser. Den er helt igennem open source, og du kan selv bestemme farverne.
 
-        Denne app er en del af en større serie. Du kan finde dem alle på siden http://www.simplemobiletools.com
+        Denne app er en del af en større serie. Du kan finde dem alle på siden https://www.simplemobiletools.com
     </string>
 
     <!--
