--- a/app/src/main/res/values-gl/strings.xml
+++ b/app/src/main/res/values-gl/strings.xml
@@ -60,7 +60,7 @@
 
         Non ten publicidade ou permisos innecesarios. É de código totalmente aberto e pode mudar a cor ao seu gusto.
 
-        Este aplicativo é parte de unha serie maior de aplicativos. Pode atopar o resto en http://www.simplemobiletools.com
+        Este aplicativo é parte de unha serie maior de aplicativos. Pode atopar o resto en https://www.simplemobiletools.com
     </string>
 
     <!--
