--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -57,7 +57,7 @@
 
         Nem mutat reklámokat, és nem igényel hozzáféréseket. Teljesen nyílt forráskódú, és sötét téma is beállítható.
 
-        Ez az alkalmazás egy nagyobb alkalmazás-sorozat része. A továbbiak itt találhatók: http://www.simplemobiletools.com
+        Ez az alkalmazás egy nagyobb alkalmazás-sorozat része. A továbbiak itt találhatók: https://www.simplemobiletools.com
     </string>
 
     <!--
