--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -57,7 +57,7 @@
 
         Без рекламы и излишних прав доступа. Полностью открытое ПО, а также со встроенной темной темой.
 
-        Это только одно приложение из множества других в серии. Вы можете найти остальные на http://www.simplemobiletools.com
+        Это только одно приложение из множества других в серии. Вы можете найти остальные на https://www.simplemobiletools.com
     </string>
 
     <!--
