--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -57,7 +57,7 @@
 
         Ne contient ni publicités, ni autorisations inutiles. Complétement opensource, fournit un thème sombre également.
 
-        Cette application est juste une pièce d\'une plus grande série d\'applications. Vous pouvez trouver le reste de celles-ci à http://www.simplemobiletools.com
+        Cette application est juste une pièce d\'une plus grande série d\'applications. Vous pouvez trouver le reste de celles-ci à https://www.simplemobiletools.com
     </string>
 
     <!--
