--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Schlichte Notizen</string>
+    <string name="app_name">Simple Notes</string>
     <string name="app_launcher_name">Notizen</string>
     <string name="widget_config">Vielen Dank, dass du Simple Notes benutzt.\nWeitere einfache Apps findest du auf SimpleMobileTools.com.</string>
     <string name="cannot_share_empty_text">Eine leere Notiz kann nicht geteilt werden</string>
@@ -24,7 +24,7 @@
     <string name="update_file_at_note">Übernehme Änderungen an der Notiz in die Datei\n(Notiz wird gelöscht, wenn die Datei gelöscht wird oder sich der Pfad ändert.)</string>
     <string name="delete_file_itself">Lösche Datei \"%s\"</string>
     <string name="note_saved_successfully">Notiz \"%s\" erfolgreich gespeichert</string>
-    <string name="note_exported_successfully">Note \"%s\" exported successfully</string>
+    <string name="note_exported_successfully">Notiz \"%s\" erfolgreich exportiert</string>
 
     <!-- Settings -->
     <string name="display_success_message">Zeige Benachrichtigung bei erfolgreichem Speichern</string>
@@ -45,19 +45,19 @@
     <!-- Import / Export -->
     <string name="export_all_notes">Alle Notizen als Dateien exportieren</string>
     <string name="import_notes">Mehrere Dateien als Notizen importieren</string>
-    <string name="import_folder">Import folder</string>
+    <string name="import_folder">Ordner importieren</string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- Short description has to have less than 80 chars -->
     <string name="app_short_description">Ein einfaches Textfeld für Notizen, ganz ohne Werbung.</string>
     <string name="app_long_description">
-        Du musst dir schnell aufschreiben, was du kaufen wolltest oder vielleicht eine Adresse oder Idee für ein Startup? Dann ist diese App genau das Richtige für dich! Keine komplizierte Einrichtung, du kannst direkt beginnen zu tippen. Inklusive Autosave-Funktion, damit du keine ungespeicherten Änderungen verlierst. Unterstützt die Erstellung von mehreren unabhängigen Notizen.
+        Du musst dir schnell aufschreiben, was du kaufen wolltest oder vielleicht eine Adresse oder Idee für ein Startup? Dann ist diese Anwendung genau das Richtige für dich! Keine komplizierte Einrichtung, du kannst direkt beginnen zu tippen. Inklusive Autosave-Funktion, damit du keine ungespeicherten Änderungen verlierst. Unterstützt die Erstellung von mehreren unabhängigen Notizen.
 
-        Du kannst auf eine Notiz in Windeseile durch die anpassbaren Widgets zurückgreifen, welche die App mit einem Klick öffnen.
+        Du kannst auf eine Notiz in Windeseile durch die anpassbaren Widgets zurückgreifen, welche die Anwendung mit einem Klick öffnen.
 
         Beinhaltet keine Werbung oder unnötige Berechtigungen. Sie ist komplett Open Source, alle verwendeten Farben sind anpassbar.
 
-        Diese App ist nur eine aus einer größeren Serie von schlichten Apps. Der Rest davon findet sich auf https://www.simplemobiletools.com
+        Diese Anwendung ist nur eine aus einer größeren Serie. Der Rest davon findet sich auf https://www.simplemobiletools.com
     </string>
 
     <!--
